cluster/eu-de-01/udl/stats/web/webapp.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: udl-stats
spec:
  selector:
    app: webapp
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
